# kenv

./: .gitignore  COMPLETION_REPORT.md  Cargo.toml  LICENSE  PROBLEM_2_TODO.md  README.md  README_zh.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.ts  App.vue  VaultCreateForm.vue  i18n.ts  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: handlers.rs  lib.rs  main.rs  socket_server.rs
apps/desktop/src/i18n/messages/: en.ts  zh-CN.ts
crates/kenv-cli/: Cargo.toml
crates/kenv-cli/src/: ipc.rs  main.rs
crates/kenv-cli/tests/: create_ipc.rs  ipc_error_handling.rs  status.rs
crates/kenv-core/: Cargo.toml
crates/kenv-core/src/: crypto.rs  dek.rs  lib.rs  ssh.rs  vault.rs
crates/kenv-core/src/platform/: ctap2.rs  mod.rs
crates/kenv-core/src/platform/macos/: mod.rs
crates/kenv-core/src/slots/: ctap2.rs  mod.rs  password.rs  touchid.rs
crates/kenv-core/src/vault/: tlv.rs
crates/kenv-core/tests/: concurrent_persist.rs  create_vault.rs  error_variants.rs  lock_clears_state.rs  mutation_rollback.rs  reauth_session_guard.rs  slot_management.rs  ssh_operations.rs  unlock_corrupted_ciphertext.rs  unlock_missing_vault.rs  unlock_resets_reauth.rs  unlock_success.rs  unlock_wrong_password.rs  vault_creation.rs  vault_file_format.rs  vault_status.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_zh.md  DEVELOPMENT.md  MVP.md  MVP_zh.md  SECURITY.md  SECURITY_zh.md
