[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/kenv-core",
  "crates/kenv-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/hd/kenv"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
