[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/kenv-core",
  "crates/kenv-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/hd/kenv"

[workspace.dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.8"
dirs = "5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
