[package]
name = "kenv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
hmac.workspace = true
rand.workspace = true
dirs.workspace = true
parking_lot.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test.workspace = true
