[package]
name = "kenv-desktop"
version = "0.1.0"
description = "Desktop management app for kenv"
authors = ["kenv contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# The uniqueness requirement matters especially for future Windows builds; keep the suffix in place across platforms.
name = "kenv_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kenv-core = { path = "../../../crates/kenv-core" }
zeroize.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
